--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
           src="https://cryptologos.cc/logos/litecoin-ltc-logo.png"><code>Ldu47ectTFWYqpQTXKtwYSviwze4XiUbdH</code></div>
     </div>
   </div>
+  <a href="https://github.com/huntiezz/usa" target="_blank" class="gh">
+    <img src="https://cdn.simpleicons.org/github/0f172a" alt="GitHub">
+  </a>
   <script type="module" src="/src/main.js"></script>
 </body>
 
